--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_local_notifications: ^18.0.1
+  permission_handler: ^11.3.1
 
 
 dev_dependencies:
@@ -45,12 +47,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^5.0.0
   get: ^4.6.6
-  firebase_core: ^3.9.0
+  firebase_core: ^3.10.0
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.6.0
   google_sign_in: ^6.1.6
+  firebase_messaging: ^15.2.0
 
 
 
