--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -17,11 +17,11 @@ def flutterVersionCode = localProperties.getProperty("flutter.versionCode", "1")
 def flutterVersionName = localProperties.getProperty("flutter.versionName", "1.0")
 
 android {
+    namespace "com.example.flutter_google_signin"
     compileSdkVersion 34
 
     defaultConfig {
-        applicationId "com.example.projectfirebase"  // Pastikan ini sesuai dengan yang ada di AndroidManifest.xml
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 34
         versionCode 1
         versionName "1.0"
